# my_skills

./: .gitignore  .gitmodules  README.md  api-design-principles  code-review  frontend-design  move_skills.py  project-framework-analyzer  skill-creator  vue-best-practices
code-review/: SKILL.md
custom/code-review/references/: review_checklist.md
custom/project-framework-analyzer/: SKILL.md
custom/project-framework-analyzer/assets/: framework-diagram-template.md
custom/project-framework-analyzer/references/: analysis-patterns.md
custom/qt-backend-framework/: SKILL.md
custom/qt-backend-framework/assets/cpp-backend/: .gitignore  CMakeLists.txt
custom/qt-backend-framework/assets/cpp-backend/controller/: maincontroller.cpp  maincontroller.h
custom/qt-backend-framework/assets/cpp-backend/model/: appmodel.h
custom/qt-backend-framework/assets/cpp-backend/service/: appservice.cpp  appservice.h
custom/qt-backend-framework/assets/python-backend/: main.py
custom/qt-backend-framework/assets/python-backend/controller/: main_controller.py
custom/qt-backend-framework/assets/python-backend/model/: __init__.py  app_model.py
custom/qt-backend-framework/assets/python-backend/service/: app_service.py
custom/qt-backend-framework/references/: backend-architecture.md  communication-patterns.md
custom/qt-ui-framework/: SKILL.md
custom/qt-ui-framework/assets/cpp-widgets/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
custom/qt-ui-framework/assets/pyqt5/: main.py  mainwindow.py
custom/qt-ui-framework/assets/pyqt6/: main.py  mainwindow.py
custom/qt-ui-framework/references/: frontend-backend-separation.md  qt-versions.md
project-framework-analyzer/: SKILL.md
